--- a/styles/4_blog.css
+++ b/styles/4_blog.css
@@ -1,21 +1,321 @@
+/* --- Layout --- */
+.container {
+  padding: 0 20px;
+  margin: 0 auto; /* bus visada centre*/
+}
+
+@media screen and (min-width: 500px) {
+  .container {
+    max-width: 500px;
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .container {
+    max-width: 680px;
+  }
+}
+
+@media screen and (min-width: 920px) {
+  .container {
+    max-width: 920px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .container {
+    max-width: 1000px;
+  }
+}
+
 img {
   width: 100%;
 }
 
+/* mobile first */
+
+/* section one */
 .trending {
+  margin-top: 10px;
+  display: flex;
+  width: 100%;
+  height: 400px;
+}
+
+.bg_img {
+  width: 40%;
+  min-width: 200px;
+  background: url(../assets/svg/blog1.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 400px;
+  overflow: visible;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay {
+  background: rgba(30, 27, 27, 0.6);
+  height: 100%;
+}
+
+.bg_text {
+  width: 60%;
+  background-color: var(--black-color);
+  padding: 30px;
+}
+
+.headline-1 {
+  color: var(--white-color);
+  font-weight: 800;
+  text-align: center;
+  padding-top: 150px;
+}
+
+.title {
+  color: var(--primary-color);
+  letter-spacing: 0.24em;
+  font-size: 12px;
+  margin-top: 40px;
+}
+
+.headline-4 {
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+.text-1 {
+  color: var(--white-color);
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.btn {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border: none;
+  border-radius: 12px;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.post_date {
+  color: var(--white-color);
+  opacity: 0.8;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 15px;
+}
+
+/* section two */
+
+.blog_articles {
+  background-color: var(--service-grey-color);
+  padding-top: 60px;
+}
+
+.blog__card {
+  width: 100%;
+  background-color: var(--white-color);
+  padding: 30px;
+}
+
+.blog_date {
+  color: var(--grey-color);
+  opacity: 0.8;
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 15px;
+}
+
+.blog_headline {
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 15px;
+}
+
+.blog_text {
+  color: var(--black-text-color);
+  opacity: 0.6;
+  font-size: 15px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.blog__card a {
+  text-decoration: none;
+  color: var(--black-color);
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.blog__card a:hover {
+  opacity: 0.7;
+}
+
+/* three posts */
+.post {
+  margin-top: 40px;
+  display: flex;
+}
+
+.post img {
+  width: 150px;
+}
+
+.article {
+  font-weight: 700;
+  font-size: 20px;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+
+.dates .blog_date {
+  margin-left: 20px;
+}
+
+/* section three */
+
+.block {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 50px;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+
+.block_title {
+  font-weight: 700;
+  font-size: 18px;
+  margin-top: 15px;
+}
+
+.block_text {
+  color: var(--black-text-color);
+  font-weight: 600;
+  font-size: 14px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+/* section four */
+.contact {
+  display: flex;
+  width: 100%;
+  margin-top: 80px;
+}
+
+.contact__items {
+  display: flex;
   width: 100%;
 }
 
-.blog_container {
-  width: 100%;
+.left-img {
+  background-image: url(../assets/svg/about_us_2.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 33.3%;
+  height: 300px;
+}
+
+.contact_text {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--primary-color);
+  width: 33.3%;
+  height: 300px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contact_text h3 {
+  color: var(--white-color);
+  font-weight: 600;
+  font-size: 20px;
+  letter-spacing: -0.03em;
+  margin: 15px;
+}
+
+.contact_text button {
+  width: 100px;
+  height: 40px;
+  border: none;
+  border-radius: 12px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  margin: 15px;
+  margin-top: 40px;
+}
+
+.contact_text button:hover {
+  opacity: 0.9;
+}
+
+/*--- -- section five */
+
+.contact_2 {
+  background-color: var(--black-color);
+  opacity: 0.98;
+  color: var(--white-color);
+  padding-bottom: 50px;
+}
+
+.contact_2-left-side h3 {
+  padding-top: 50px;
+  font-weight: 700;
+  font-size: 30px;
+  width: 300px;
+  letter-spacing: -0.03em;
+  margin-left: 50px;
+}
+
+.contact_2-left-side img {
+  width: 120px;
+  margin-left: 50px;
+  margin-top: 15px;
+}
+
+.contact_2-right-side {
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.body-02 {
+  font-size: 14px;
+  opacity: 0.6;
+  font-weight: 600;
+}
+
+.title-02 {
+  margin-top: 5px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: -0.03em;
+}
+
+.right-img {
+  background-image: url(../assets/svg/about_us_3.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 33.3%;
+  height: 300px;
 }
 
 @media screen and (min-width: 1024px) {
+  /* section one */
   .trending {
-    margin-top: 50px;
     display: flex;
     width: 100%;
-    height: 400px;
+    height: 500px;
   }
 
   .bg_img {
@@ -24,25 +324,201 @@ img {
     background: url(../assets/svg/blog1.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 367.5px;
+    height: 500px;
     overflow: visible;
     justify-content: center;
     align-items: center;
   }
 
   .overlay {
-    background: rgba(30, 27, 27, 0.8);
+    background: rgba(30, 27, 27, 0.6);
     height: 100%;
-  }
-
-  .overlay-2 {
-    background: var(--black-color);
-    height: 100%;
-    mix-blend-mode: lighten;
   }
 
   .bg_text {
     width: 60%;
     background-color: var(--black-color);
+    padding: 40px;
+  }
+
+  .headline-1 {
+    color: var(--white-color);
+    font-weight: 800;
+    text-align: center;
+    padding-top: 150px;
+    font-size: 40px;
+  }
+
+  .title {
+    color: var(--primary-color);
+    letter-spacing: 0.24em;
+    font-size: 16px;
+    margin-top: 40px;
+  }
+
+  .headline-4 {
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: 10px;
+    width: 600px;
+  }
+
+  .text-1 {
+    color: var(--white-color);
+    font-weight: 500;
+    font-size: 18px;
+    margin-top: 15px;
+    width: 650px;
+  }
+
+  .bg_txt_item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+  }
+
+  .btn {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    border: none;
+    border-radius: 12px;
+    width: 130px;
+    height: 40px;
+  }
+
+  .btn:hover {
+    opacity: 0.8;
+  }
+
+  .post_date {
+    color: var(--white-color);
+    opacity: 0.8;
+    font-size: 12px;
+    font-weight: 600;
+  }
+
+  /* section two */
+  .blog_articles-items {
+    display: flex;
+    gap: 30px;
+  }
+
+  .blog_articles {
+    padding-bottom: 80px;
+  }
+
+  .article {
+    font-size: 20px;
+    width: 300px;
+  }
+
+  /* section three */
+  .block {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 80px;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  .block_title {
+    font-weight: 700;
+    font-size: 23px;
+    margin-top: 15px;
+  }
+
+  .block_text {
+    color: var(--black-text-color);
+    font-weight: 600;
+    font-size: 15px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+
+  /* section four */
+  .contact {
+    display: flex;
+    width: 100%;
+    margin-top: 80px;
+  }
+
+  .contact__items {
+    display: flex;
+    width: 100%;
+  }
+
+  .left-img {
+    background-image: url(../assets/svg/about_us_2.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 15%;
+    height: 300px;
+  }
+
+  .contact_text {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    width: 40%;
+    height: 300px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contact_text h3 {
+    color: var(--white-color);
+    font-weight: 600;
+    font-size: 25px;
+    width: 300px;
+    letter-spacing: -0.03em;
+    margin-left: 50px;
+  }
+
+  .contact_text button {
+    width: 120px;
+    height: 40px;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    margin-left: 50px;
+    margin-top: 40px;
+  }
+
+  .contact_text button:hover {
+    opacity: 0.9;
+  }
+
+  .right-img {
+    background-image: url(../assets/svg/about_us_3.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 45%;
+    height: 300px;
+  }
+
+  /* section five */
+
+  .contact_2 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .contact_2-left-side {
+    margin-top: 35px;
+    margin-right: 100px;
+  }
+
+  .contact_2-left-side h3 {
+    font-size: 35px;
+    margin-bottom: 30px;
+  }
+
+  .contact_2-right-side {
+    margin-top: 90px;
   }
 }
