--- a/styles/3_header.css
+++ b/styles/3_header.css
@@ -1,6 +1,8 @@
 .header-container {
   display: flex;
   width: 100%;
+  margin: 0 auto; /* bus visada centre*/
+  padding: 10px;
 }
 
 .logo h1 {
@@ -19,18 +21,20 @@
   margin-left: 50px;
 }
 
-.menu__button {
+.toggler {
   display: flex;
   justify-content: center;
   align-items: center;
   border: none;
-  border-radius: 9px;
-  background-color: var(--black-color);
-  color: var(--white-color);
+  margin-top: 20px;
+  margin-left: 70px;
   cursor: pointer;
+  font-size: 28px;
+  padding-bottom: 40px;
+  color: var(--black-color);
 }
 
-.header-container button:hover {
+.toggler:hover {
   opacity: 0.9;
 }
 
@@ -42,18 +46,39 @@
   list-style-type: none;
 }
 
+.menu-items {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  gap: 5px;
+}
+
+.menu-items a {
+  text-decoration: none;
+  color: var(--black-color);
+  white-space: nowrap;
+  display: flex;
+  margin-left: 30px;
+}
+
+.menu-items a:hover {
+  opacity: 0.8;
+}
+
 .hidden {
   display: none;
 }
 
 .call_illustration {
   display: flex;
+  margin-left: 30px;
 }
 
 .header-left {
   display: flex;
-  margin-left: 40px;
   width: 100%;
+  height: 50px;
+  white-space: nowrap;
 }
 
 .line_icon {
@@ -67,6 +92,7 @@
   width: 30px;
   margin-left: 15px;
   margin-top: 20px;
+  display: flex;
 }
 
 .phone_number {
@@ -87,9 +113,9 @@
   font-weight: 600;
 }
 
-/* desktop */
+/* tablet */
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .header-container {
     margin: 0 auto; /* bus visada centre*/
   }
@@ -123,12 +149,108 @@
     justify-content: flex-start;
     align-items: center;
   }
-  .nav button {
+  .toggler {
     display: none;
   }
 
   .hidden {
-    display: initial;
+    display: flex;
+  }
+
+  .logo {
+    display: flex;
+    text-align: center;
+  }
+
+  .menu-items {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    margin-left: 25px;
+    white-space: nowrap;
+  }
+
+  .menu-items a {
+    text-decoration: none;
+    color: var(--black-color);
+    font-size: 15px;
+    margin-left: 0;
+  }
+
+  .menu-items a:hover {
+    color: var(--grey-color);
+  }
+
+  .header-left {
+    margin-left: 10px;
+  }
+
+  .line_icon {
+    margin-left: 15px;
+    height: 35px;
+    display: flex;
+    margin-top: 20px;
+  }
+
+  .call_icon {
+    width: 30px;
+    margin-top: 20px;
+  }
+
+  .phone_number {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    margin-left: 15px;
+  }
+}
+
+/* desktop */
+
+@media screen and (min-width: 1024px) {
+  .header-container {
+    margin: 0 auto; /* bus visada centre*/
+    padding: 0;
+  }
+
+  @media screen and (min-width: 500px) {
+    .header-container {
+      max-width: 500px;
+    }
+  }
+
+  @media screen and (min-width: 680px) {
+    .header-container {
+      max-width: 680px;
+    }
+  }
+
+  @media screen and (min-width: 920px) {
+    .header-container {
+      max-width: 920px;
+    }
+  }
+
+  @media screen and (min-width: 1000px) {
+    .header-container {
+      max-width: 1000px;
+    }
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .toggler {
+    display: none;
+  }
+
+  .hidden {
+    display: flex;
   }
 
   .logo {
@@ -150,6 +272,8 @@
   .menu-items a {
     text-decoration: none;
     color: var(--black-color);
+    font-size: 16px;
+    margin-left: 0;
   }
 
   .menu-items a:hover {
