--- a/styles/4_index.css
+++ b/styles/4_index.css
@@ -41,6 +41,7 @@ img {
   display: flex;
   flex-direction: column;
   margin-top: 70px;
+  padding-bottom: 80px;
 }
 
 .headline-1 {
@@ -654,6 +655,594 @@ form input {
 }
 
 /* tablet */
+@media screen and (min-width: 768px) {
+  /* section one */
+
+  .book_service {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: -70px;
+    gap: 10px;
+    margin-bottom: -110px;
+  }
+
+  .headline-1 {
+    font-size: 30px;
+    font-weight: 800;
+  }
+
+  /* section right side */
+
+  .book__service-right img {
+    width: 100%;
+  }
+
+  .quick-service {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 7px solid rgba(225, 225, 225, 0.43);
+    background-clip: padding-box;
+    border-radius: 50px;
+    padding: 8px;
+    width: 150px;
+    height: 60px;
+    background-color: var(--white-color);
+    margin-top: -360px;
+    margin-left: -15px;
+    z-index: 1;
+  }
+
+  .quick-service img {
+    width: 40px;
+  }
+
+  .quick-service p {
+    font-weight: 600;
+    font-size: 14px;
+  }
+
+  .rating {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 7px solid rgba(225, 225, 225, 0.43);
+    background-clip: padding-box;
+    border-radius: 50px;
+    padding: 8px;
+    width: 180px;
+    height: 60px;
+    background-color: var(--white-color);
+    margin-top: -180px;
+    margin-left: 100px;
+    z-index: 1;
+  }
+
+  .rating img {
+    width: 90px;
+  }
+
+  .top-rating {
+    font-weight: 700;
+    font-size: 14px;
+  }
+
+  .bottom-rating {
+    opacity: 0.7;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  /* section two */
+
+  .questions {
+    background-color: var(--steelgrey-color);
+    padding-bottom: 80px;
+  }
+
+  .headline-2 {
+    font-weight: 800;
+    font-size: 35px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding-top: 60px;
+  }
+
+  .feature {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .feature img {
+    width: 35px;
+  }
+
+  .text-1 {
+    color: var(--black-color);
+    font-weight: 600;
+  }
+
+  .body-text {
+    color: var(--black-color);
+    opacity: 0.6;
+    font-weight: 600;
+    font-size: 14px;
+    margin-left: 45px;
+    margin-bottom: 20px;
+  }
+
+  .questions a {
+    text-decoration: none;
+    color: var(--black-color);
+    font-weight: 600;
+    margin-left: 45px;
+  }
+
+  .questions i {
+    margin-left: 10px;
+  }
+
+  /* right side */
+
+  .form-title {
+    font-weight: 600;
+    margin-top: 40px;
+    font-size: 25px;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 2px;
+    margin-top: 20px;
+  }
+
+  form input {
+    height: 40px;
+    border: none;
+  }
+
+  ::placeholder {
+    padding: 25px;
+    color: var(--black-color);
+    opacity: 0.6;
+    font-weight: 600;
+  }
+
+  /* setion three */
+
+  .process {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  .process-headline {
+    font-size: 30px;
+    font-weight: 800;
+  }
+
+  .process-text {
+    color: var(--black-color);
+    opacity: 0.6;
+    font-weight: 600;
+    margin-top: 20px;
+  }
+
+  .process button {
+    width: 120px;
+  }
+
+  /* right side */
+  .process-right {
+    display: flex;
+    margin-top: 40px;
+  }
+
+  .circles {
+    width: 40px;
+  }
+
+  .circle_line {
+    width: 2px;
+    display: flex;
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .circles_text {
+    margin-left: 20px;
+  }
+
+  .title-01 {
+    color: var(--black-color);
+    font-weight: 700;
+    letter-spacing: -0.03em;
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+  .body-01 {
+    color: var(--black-color);
+    opacity: 0.6;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 15px;
+    margin-bottom: 45px;
+  }
+
+  /* section four */
+
+  .services {
+    background-color: var(--light-grey-color);
+    padding-top: 80px;
+  }
+
+  .title-2 {
+    text-align: center;
+    font-weight: 600;
+  }
+
+  .services_headline {
+    text-align: center;
+    font-weight: 800;
+    font-size: 30px;
+    margin-top: 20px;
+  }
+
+  /* cards */
+
+  .services_cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 40px;
+    gap: 10px;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .white-card {
+    background-color: var(--white-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 60px;
+  }
+
+  .white-card img {
+    width: 30px;
+  }
+
+  .white-card-text {
+    text-align: center;
+    white-space: nowrap;
+    font-weight: 600;
+    margin-top: 10px;
+    font-size: 14px;
+  }
+
+  .orange-card {
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 60px;
+  }
+
+  .orange-card img {
+    width: 30px;
+  }
+
+  .orange-card-text {
+    text-align: center;
+    white-space: nowrap;
+    font-weight: 600;
+    margin-top: 10px;
+    color: var(--white-color);
+    font-size: 14px;
+  }
+
+  .services a {
+    text-decoration: none;
+    color: var(--black-color);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 40px;
+  }
+
+  .services a:hover {
+    opacity: 0.8;
+  }
+
+  .services a i {
+    margin-left: 10px;
+  }
+
+  /* section five */
+  .contact {
+    display: flex;
+    width: 100%;
+  }
+
+  .contact__items {
+    display: flex;
+    width: 100%;
+  }
+
+  .left-img {
+    background-image: url(../assets/svg/about_us_2.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 33.3%;
+    height: 300px;
+  }
+
+  .contact_text {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    width: 33.3%;
+    height: 300px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contact_text h3 {
+    color: var(--white-color);
+    font-weight: 600;
+    font-size: 20px;
+    letter-spacing: -0.03em;
+    margin: 15px;
+  }
+
+  .contact_text button {
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    margin: 15px;
+    margin-top: 40px;
+  }
+
+  .contact_text button:hover {
+    opacity: 0.9;
+  }
+
+  .right-img {
+    background-image: url(../assets/svg/about_us_3.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 33.3%;
+    height: 300px;
+  }
+
+  /* section six */
+
+  .benefits {
+    background-color: var(--light-grey-color);
+  }
+
+  .benefits-items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 50px;
+  }
+
+  .benefit-number {
+    color: var(--secondary-color);
+    font-weight: 800;
+    font-size: 35px;
+    margin-top: 20px;
+  }
+
+  .benefit-text {
+    font-weight: 600;
+    color: var(--black-color);
+    opacity: 0.7;
+    font-size: 15px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+  }
+
+  /* sectoin seven */
+
+  .brands {
+    background-color: var(--brand-bg-color);
+    padding-bottom: 80px;
+  }
+
+  .brand-headline {
+    font-weight: 700;
+    text-align: center;
+    padding-top: 80px;
+    font-size: 30px;
+  }
+
+  .brand_items {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+  }
+
+  /* section eight */
+  .review-container {
+    background: var(--light-grey-color);
+  }
+
+  .review__cards {
+    display: flex;
+    gap: 10px;
+  }
+
+  .headline-3 {
+    font-weight: 700;
+    text-align: center;
+    padding-top: 80px;
+    font-size: 25px;
+  }
+
+  .review {
+    background-color: var(--white-color);
+    padding: 30px;
+    margin-top: 30px;
+    width: 100%;
+  }
+
+  .review img {
+    width: 30px;
+  }
+
+  .nickname {
+    display: flex;
+    gap: 10px;
+  }
+
+  .surname {
+    font-weight: 600;
+    font-size: 14.5px;
+  }
+
+  .city {
+    color: var(--grey-color);
+    font-weight: 600;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+
+  .review-text {
+    font-size: 14px;
+    font-size: 600;
+    margin-top: 10px;
+  }
+
+  .scrolling {
+    padding-bottom: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .line {
+    width: 100px;
+  }
+
+  .right-arrow {
+    width: 30px;
+    margin-right: 8px;
+  }
+
+  .left-arrow {
+    width: 35px;
+  }
+
+  /* section nine */
+
+  .faq {
+    background-color: var(--steelgrey-color);
+    padding-bottom: 80px;
+  }
+
+  .faq_questions-first {
+    background-color: var(--white-color);
+    margin: 20px;
+    padding: 20px;
+  }
+
+  .text-with-minus {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 300px;
+  }
+
+  .faq_questions-first img,
+  .faq_questions img {
+    width: 40px;
+  }
+
+  .title-3 {
+    font-weight: 600;
+  }
+
+  .faq-text {
+    color: var(--grey-color);
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 20px;
+  }
+
+  .faq_questions {
+    display: flex;
+    background-color: var(--white-color);
+    margin: 20px;
+    padding: 20px;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 320px;
+  }
+
+  /* section ten */
+
+  .contact_2 {
+    background-color: var(--black-color);
+    opacity: 0.98;
+    color: var(--white-color);
+    padding-bottom: 50px;
+  }
+
+  .contact_2-left-side h3 {
+    padding-top: 50px;
+    font-weight: 700;
+    font-size: 30px;
+    width: 300px;
+    letter-spacing: -0.03em;
+    margin-left: 50px;
+  }
+
+  .contact_2-left-side img {
+    width: 120px;
+    margin-left: 50px;
+    margin-top: 15px;
+  }
+
+  .contact_2-right-side {
+    margin-left: 50px;
+    margin-top: 30px;
+  }
+
+  .body-02 {
+    font-size: 14px;
+    opacity: 0.6;
+    font-weight: 600;
+  }
+
+  .title-02 {
+    margin-top: 5px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: -0.03em;
+  }
+}
 
 /* desktop */
 
@@ -662,10 +1251,13 @@ form input {
     display: flex;
     flex-direction: row;
     margin-top: 70px;
+    gap: 60px;
+    margin-bottom: 10px;
   }
 
   .headline-1 {
-    margin-top: 100px;
+    margin-top: 10px;
+    width: 500px;
     font-size: 45px;
     font-weight: 800;
   }
@@ -720,7 +1312,7 @@ form input {
     padding: 8px;
     width: max-content;
     background-color: var(--white-color);
-    margin-top: -310px;
+    margin-top: -350px;
     margin-left: -30px;
     z-index: 1;
   }
@@ -746,7 +1338,7 @@ form input {
     width: max-content;
     background-color: var(--white-color);
     margin-top: -100px;
-    margin-left: 200px;
+    margin-left: 250px;
     z-index: 1;
   }
 
@@ -1246,7 +1838,11 @@ form input {
   }
 
   .title-3 {
+    display: flex;
+    flex-direction: row;
     font-weight: 600;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 
   .faq-text {
@@ -1263,9 +1859,8 @@ form input {
     padding: 20px;
     justify-content: flex-end;
     align-items: center;
-    gap: 420px;
+    gap: 450px;
     width: 800px;
-    white-space: nowrap;
   }
 
   /* section ten */
