--- a/styles/4_services.css
+++ b/styles/4_services.css
@@ -346,6 +346,277 @@ img {
   height: 300px;
 }
 
+/* tablet */
+
+@media screen and (min-width: 768px) {
+  /* section one */
+  .our__services {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
+
+  .services_card {
+    display: flex;
+    flex-direction: column;
+    height: 550px;
+  }
+
+  .services-items {
+    display: flex;
+  }
+
+  .bg-img {
+    background-image: url(../assets/svg/services_2.svg);
+    width: 100%;
+  }
+
+  .services_card img {
+    display: none;
+  }
+
+  .headline-1 {
+    margin-top: 80px;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 84px;
+    letter-spacing: -0.03em;
+    margin-left: 40px;
+  }
+
+  .text-1 {
+    font-weight: 600;
+    font-size: 14px;
+    margin-left: 40px;
+  }
+
+  .btn {
+    width: 150px;
+    height: 40px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 175%;
+    margin-top: 50px;
+  }
+
+  /* section two */
+
+  .diagnostics {
+    background-color: var(--service-grey-color);
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 50px;
+  }
+
+  .d_items {
+    display: flex;
+    justify-content: center;
+  }
+
+  /* first card */
+
+  .first_card {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--white-color);
+    padding: 20px;
+    margin: 40px;
+    width: 460px;
+    height: 630px;
+  }
+
+  .first_card h3 {
+    padding-top: 30px;
+    font-size: 20px;
+    color: var(--black-color);
+    font-weight: 700;
+  }
+
+  .first_card p {
+    color: var(--black-text-color);
+    opacity: 0.6;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 30px;
+  }
+
+  .first_card a {
+    text-decoration: none;
+    color: var(--black-color);
+    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 15px;
+  }
+
+  .cards_item {
+    width: 200px;
+    height: 200px;
+  }
+
+  .cards_item_orange {
+    width: 200px;
+    height: 200px;
+  }
+
+  /* second card */
+  .second_card {
+    display: grid;
+    grid-template-columns: repeat(2, 0fr);
+    margin: 40px;
+    gap: 15px;
+    width: 470px;
+    height: 630px;
+    margin-top: 40px;
+  }
+
+  /* section three */
+
+  .process {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 80px;
+  }
+
+  .left_side h3,
+  .right_side h3 {
+    font-size: 25px;
+    width: 400px;
+    display: flex;
+  }
+
+  .left_side h3 {
+    margin-top: -40px;
+  }
+
+  .reason {
+    display: flex;
+    font-size: 16px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    width: 350px;
+    font-weight: 600;
+  }
+
+  .reason p {
+    padding-top: 25px;
+  }
+  .reason img {
+    width: 30px;
+    margin-right: 15px;
+  }
+
+  .left_side .image_layout {
+    margin-top: 50px;
+  }
+
+  .right_side h3 {
+    margin-right: -50px;
+  }
+
+  .right_side p {
+    color: var(--black-text-color);
+    opacity: 0.6;
+    font-weight: 600;
+    font-size: 15px;
+    width: 350px;
+    margin: 30px;
+    margin-right: 20px;
+  }
+
+  .right_side button {
+    background-color: var(--primary-color);
+    border: none;
+    width: 120px;
+    height: 40px;
+    color: var(--white-color);
+    border-radius: 12px;
+    margin-right: 220px;
+    margin-bottom: 60px;
+  }
+
+  /* section four */
+  /* section four */
+  .contact {
+    display: flex;
+    width: 100%;
+    margin-top: 80px;
+  }
+
+  .contact__items {
+    display: flex;
+    width: 100%;
+  }
+
+  .left-img {
+    background-image: url(../assets/svg/about_us_2.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 33.3%;
+    height: 300px;
+  }
+
+  .contact_text {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--primary-color);
+    width: 33.3%;
+    height: 300px;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contact_text h3 {
+    color: var(--white-color);
+    font-weight: 600;
+    font-size: 20px;
+    letter-spacing: -0.03em;
+    margin: 15px;
+  }
+
+  .contact_text button {
+    width: 100px;
+    height: 40px;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    margin: 15px;
+    margin-top: 40px;
+  }
+
+  .contact_text button:hover {
+    opacity: 0.9;
+  }
+
+  /* section five */
+
+  .contact_2 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .contact_2-left-side {
+    margin-top: 35px;
+    margin-right: 100px;
+  }
+
+  .contact_2-left-side h3 {
+    font-size: 35px;
+    margin-bottom: 30px;
+  }
+
+  .contact_2-right-side {
+    margin-top: 90px;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   /* section one */
   .our__services {
